# quickdiff

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
quickdiff/: __init__.py
src/: lib.rs
tests/: test_quickdiff.py
