[package]
name = "quickdiff"
version = "0.1.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "quickdiff"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "py-clone"] }
pyo3-ffi = { version = "0.28.3" }
grouping_by = { version = "0.2.2" }
rayon = { version = "1.11.0" }