[project]
name = "quickdiff"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = [
    "maturin>=1.13.1",
]

[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"
